docs: harden CLAUDE.md with Mermaid and documentation/environment rules
Diagrams-as-Mermaid rule (colored nodes, light/dark-proof palette, v11.3+ edge animation); standing Documentation & environment policy (language, references, test-scenario docs, execution logging, runbook, k3s harness).

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>